--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "host": "next dev -H 0.0.0.0 -p 3000"
   },
   "dependencies": {
     "next": "16.1.6",
